sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:6: error: '(' expected but identifier found.
  while compteur!=(len-1){
        ^AlgSelectionSort:15: error: illegal start of simple expression
} 
^